@@ -1,3 +1,9 @@
+2004-01-21  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/i386/i386.c (ix86_constant_alignment): Decrease alignment
+	of long string literals from 32 bytes to sizeof (void *) when !-Os
+	and to 1 with -Os.
+
 2004-01-20  Jakub Jelinek  <jakub@redhat.com>
 
 	* crtstuff.c (frame_dummy, __do_global_ctors_1): Call
